# proEigenGWAS

./: .gitignore  CMakeLists.txt  README.md
examples/: .Rhistory  Arab295evals.txt  Arab295projections.txt  chr22.bed  chr22.bim  chr22.fam  example_evecs.txt  exampleeg.1.txt  exampleeg.2.txt  exampleevals.txt  exampleevecs.txt  exampleprojections.txt
include/: EigenGWAS.hpp  Goptions.hpp  arguments.h  eigenGWA.h  genotype.h  global.h  mailbox.h  mailman.h
src/: genotype.cpp  propca.cpp  storage.cpp
